# fintools

./: .pre-commit-config.yaml  pyproject.toml  requirements.txt  run.py
src/fintools/: main.py  parse_amz.py  parse_ibkr_qfx.py
src/tools/: parse_ibkr_qfx.py
